# baksos_backend

./: .gitignore  Dockerfile  gunicorn.sh  gunicorn_config.py  manage.py  pyproject.toml
baksos/: asgi.py  settings.py  urls.py  wsgi.py
common/: models.py  serializer.py  views.py
pasien/: admin.py  apps.py  filters.py  models.py  serializer.py  views.py
pasien/migrations/: 0001_initial.py  0002_auto_20220913_2108.py  0003_auto_20220914_2030.py  0004_auto_20220916_2217.py  0005_auto_20220918_1722.py  0006_detailpasien_pasien.py  0007_auto_20220920_1628.py  0008_alter_pasien_nomor_identitas.py  0009_alter_kartukuning_komentar.py
pasien/services/: helper.py  laporan.py  pasien.py  screening_pasien.py
referensi/: admin.py  apps.py  models.py  serializer.py  views.py
referensi/fixtures/: penyakit.json  puskemas.json  puskesmas.json
referensi/migrations/: 0001_initial.py  0002_auto_20220913_2108.py
