[tool.poetry]
name = "baksos"
version = "0.1.0"
description = ""
authors = ["Johnson <johnson@satnusa.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.10"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
