[tool.poetry]
name = "baksos"
version = "0.1.0"
description = ""
authors = ["Johnson <johnson@satnusa.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.10"
django-easy-audit = "^1.3.3"
django-crum = "^0.7.9"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.13.0"
isort = "^5.10.1"
openpyxl = "^3.0.10"
django-filter = "^22.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
